--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -57,25 +57,25 @@ const sizeClasses = {
     text-align: center;
     position: relative;
     overflow: hidden;
-    margin-top: -80px;
+    margin-top: 0;
     display: flex;
     align-items: center;
     justify-content: center;
   }
 
   .hero-large {
-    min-height: calc(14.4rem + 160px);
-    padding: calc(3rem + 80px) 0 3rem 0;
+    min-height: calc(14.4rem);
+    padding: 6rem 0 6rem 0;
   }
 
   .hero-medium {
-    min-height: calc(10.8rem + 160px);
-    padding: calc(3rem + 80px) 0 3rem 0;
+    min-height: calc(10.8rem);
+    padding: 6rem 0 3rem 0;
   }
 
   .hero-small {
-    min-height: calc(7.2rem + 160px);
-    padding: calc(3rem + 80px) 0 3rem 0;
+    min-height: calc(7.2rem);
+    padding: 6rem 0 3rem 0;
   }
 
   .hero-bg {
