--- a/src/pages/learn/[...slug].astro
+++ b/src/pages/learn/[...slug].astro
@@ -66,6 +66,37 @@ const articleImage = getHeroImage(post.slug);
   </Section>
 
   <style>
+    /* Ensure article styles from Layout are applied */
+    article h2 {
+      color: var(--tetra-secondary) !important;
+      margin-bottom: 1.5rem !important;
+      font-size: 2rem !important;
+      font-weight: 600 !important;
+    }
+
+    article h3 {
+      color: var(--tetra-primary) !important;
+      margin: 1.5rem 0 1rem 0 !important;
+      font-size: 1.3rem !important;
+      font-weight: 600 !important;
+    }
+
+    article p {
+      margin-bottom: 1rem !important;
+      color: #666 !important;
+      line-height: 1.6 !important;
+    }
+
+    article ul {
+      margin: 1rem 0 !important;
+      padding-left: 2rem !important;
+    }
+
+    article li {
+      margin-bottom: 0.5rem !important;
+      color: #666 !important;
+    }
+
     .article-navigation {
       margin-top: 3rem;
       padding-top: 2rem;
