--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -20,6 +20,7 @@ const { currentPage } = Astro.props;
     <ul id="nav-menu" class="">
       <li><a href="/" class={currentPage === 'home' ? 'active' : ''}>Home</a></li>
       <li><a href="/learn" class={currentPage === 'learn' ? 'active' : ''}>Learning Center</a></li>
+      <li><a href="/sitemap" class={currentPage === 'sitemap' ? 'active' : ''}>Site Map</a></li>
     </ul>
   </nav>
 </header>
